src/tests/snapshots/nyx__tests__window_opening__check_target_size@fsT-dhP0.5-b-wfsAU.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: AU\nconfig:\nwindow-rule {\n    open-fullscreen true\n    default-window-height { proportion 0.5; }\n    border { on; }\n}"
expression: snapshot
---
initial configure:
size: 1280 × 720, bounds: 1272 × 712, states: [Fullscreen]

post-map configures:
size: 632 × 352, bounds: 1272 × 712, states: []
size: 632 × 352, bounds: 1272 × 712, states: [Activated]
